--- a/discussion.ipynb
+++ b/discussion.ipynb
@@ -2,6 +2,19 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Introduction\n",
+    "\n",
+    "Heart disease remains the leading cause of death worldwide, with an estimated 17.9 million lives lost annually. [Link](https://www.who.int/health-topics/cardiovascular-diseases) The global fatalities from cardiovascular diseases (CVDs) have risen from about 12.1 million in 1990 to 18.6 million in 2019. [Link](https://world-heart-federation.org/wp-content/uploads/World-Heart-Report-2023.pdf) Identifying high-risk individuals and providing timely treatment is critical to reducing premature mortality from CVDs.\n",
+    "\n",
+    "[Professor Fausto Pinto states](https://world-heart-federation.org/news/deaths-from-cardiovascular-disease-surged-60-globally-over-the-last-30-years-report/), \"Up to 80 percent of premature heart attacks and strokes are preventable... Quality data plays a pivotal role in shaping effective policies. The opportunity to expedite efforts in reducing premature mortality from non-communicable diseases (NCDs) by one-third by 2030 remains attainable.\"\n",
+    "\n",
+    "Professor Fausto Pinto highlights the importance of data-driven approaches in predicting cardiovascular disease (CVD) risk. Leveraging the famous Framingham Heart Study's data, our project examines the potential of machine learning classification methods to assess heart disease risk and identify the risk factors. [The dataset](https://paulblanche.com/files/DataFramingham.html) contains 1,363 records and includes variables such as age, gender, blood pressure, cholesterol levels, and smoking habits, analyzed to predict the likelihood of developing heart disease. Given that many cardiovascular conditions present no initial symptoms and are preventable through lifestyle modifications, an algorithm capable of accurately detecting at-risk individuals can be pivotal. Early detection is paramount to providing early interventions, which may include lifestyle counseling and proactive medication management, thereby improving patient outcomes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ab4f0f3e-a43f-48af-957a-891659265ebf",
    "metadata": {},
    "source": [
