update scatter function

--- a/heart_analyis_model.ipynb
+++ b/heart_analyis_model.ipynb
@@ -48,7 +48,8 @@
     "# Import the count_classes function from the src folder\n",
     "sys.path.append('..')\n",
     "from src.run_knn_analysis import run_knn_analysis\n",
-    "from sklearn.metrics import confusion_matrix\n"
+    "from sklearn.metrics import confusion_matrix\n",
+    "from src.create_pairwise_scatter_plot import create_pairwise_scatter_plot\n"
    ]
   },
   {
@@ -1070,28 +1071,7 @@
    ],
    "source": [
     "# 6. pairwise scatter plots\n",
-    "base = alt.Chart(train_df).mark_point(opacity=0.5, size=10)\n",
-    "\n",
-    "# Create pairwise scatter plot with independent scales\n",
-    "pairwise_chart = base.encode(\n",
-    "    x=alt.X(alt.repeat(\"row\"), type='quantitative', scale=alt.Scale(zero=False)),\n",
-    "    y=alt.Y(alt.repeat(\"column\"), type='quantitative', scale=alt.Scale(zero=False)),\n",
-    "    color='disease:N'\n",
-    ").properties(\n",
-    "    width=150,\n",
-    "    height=150\n",
-    ").repeat(\n",
-    "    row=numerical_features,\n",
-    "    column=numerical_features\n",
-    ").resolve_scale(\n",
-    "    x='independent', \n",
-    "    y='independent'\n",
-    ")\n",
-    "\n",
-    "pairwise_chart = pairwise_chart.properties(\n",
-    "    title='Figure 4: Pairwise Scatter Plot Matrix'\n",
-    ")\n",
-    "\n",
+    "pairwise_chart = create_pairwise_scatter_plot(train_df, numerical_features)\n",
     "pairwise_chart"
    ]
   },
@@ -2020,9 +2000,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:522-project-disease]",
+   "display_name": "573",
    "language": "python",
-   "name": "conda-env-522-project-disease-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2034,7 +2014,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
