Modify small errors

--- a/src/heart_analyis_model.ipynb
+++ b/src/heart_analyis_model.ipynb
@@ -10,9 +10,8 @@
     "\n",
     "Data source: https://paulblanche.com/files/DataFramingham.html\n",
     "\n",
-    "by Joel Wu, Sandra Gross, He Ma and Doris Wang (DSCI 522 Group 10 Milestone 1)\n",
-    "\n",
-    "2023/11/15"
+    "by Joel Wu, Sandra Gross, He Ma and Doris Wang \n",
+    "\n"
    ]
   },
   {
