update intro-methodology parts

--- a/report/references.bib
+++ b/report/references.bib
@@ -1,8 +1,96 @@
-# this is an example 
-@misc{Dua2019,
-  author = "Dua, Dheeru and Graff, Casey",
-  year = "2017",
-  title = "{UCI} Machine Learning Repository",
-  url = "http://archive.ics.uci.edu/ml",
-  institution = "University of California, Irvine, School of Information and Computer Sciences" 
+@article{Tsao2015,
+   abstract = {Editorial The Framingham Heart Study: past, present and future The Framingham Heart Study (FHS) is widely recognized for its lasting contributions to cardiovascular epidemiology. In this article we review the study's history, past accomplishments , current research agenda and future research directions. Where we came from With the rapidly rising prevalence of cardiovascular disease (CVD) in the early 20th century, public health and political leaders of the USA agreed that national investment in research must be undertaken towards CVD prevention. The National Heart Institute, which later became the National Heart, Lung and Blood Institute, was formed in 1948. Since CVD encompasses conditions with prolonged subclinical course, a prospectively-followed healthy cohort was deemed to be the perfect sample in which to study development of CVD. Thus, in 1948, the U.S. Public Health Service embarked upon the first large-scale cardiovascular epidemiology study in the country-the FHS. 1 Investigators sampled 2 of every three adults aged 30-59 years in the town of Framingham, Massachusetts, yielding a sample of 5209 men and women enrolled. Data collected included detailed medical and family history and physical examination, as well as X-ray, electrocardiogram and blood tests including cholesterol and glucose, to detect abnormalities thought to play a role in development of CVD. The initial observations from FHS provided many of the central tenets of cardiovascular epidemiology that have held true over time. Published in 1957 and 1959, the first publications from 4-and 6-year follow-up reported such findings as greater incidence of coronary artery disease (CAD) associated with older age and male sex. 2,3 The FHS was the first to describe a graded relationship of CVD with obesity, systolic blood pressure, cholesterol and cigarette smoking. Furthermore, the authors noted that these conditions may amplify synergistically, as cholesterol levels were greater in smokers as compared with non-smokers. 3 The initial findings from the FHS revolutionized primary prevention of CVD. In a seminal 1961 manuscript, Dr William Kannel, who subsequently led the FHS, described the key 'factors of risk' associated with atherosclerotic CVD, including age, sex, hypertension, elevated cholesterol , diabetes and electrocardiographic left ventricular hypertrophy. 4 This singular work popularized the ubiquitous term 'risk factors' used today and defined key variables determining CVD risk in adults. FHS investigators also introduced the notion of multivariable risk, combining several risk factors into a risk score to estimate the absolute risk of developing CAD, stroke and CVD. The Framingham Risk Score 5 has stood the test of time and remains a benchmark for evaluation of patients in a multitude of clinical settings. FHS also identified major risk factors for stroke, including the key role of atrial fibrillation. As the study evolved, measurements of high-density lipopro-tein [HDL] cholesterol concentrations underscored the car-dioprotective role of this lipid trait. The epidemiology of different forms of CVD, including peripheral arterial disease and heart failure, were also characterized by several landmark FHS reports. Overall, FHS identified the role of lifestyle in mediating CVD risk and origin of several risk factors.},
+   author = {Connie W. Tsao and Ramachandran S. Vasan},
+   doi = {10.1093/IJE/DYV336},
+   issn = {0300-5771},
+   issue = {6},
+   journal = {International Journal of Epidemiology},
+   month = {12},
+   pages = {1763-1766},
+   pmid = {26705413},
+   publisher = {Oxford Academic},
+   title = {The Framingham Heart Study: past, present and future},
+   volume = {44},
+   url = {https://dx.doi.org/10.1093/ije/dyv336},
+   year = {2015},
 }
+
+@article{Andersson2019,
+   abstract = {The Framingham Heart Study (FHS) was established in 1948 to improve understanding of the epidemiology of coronary heart disease (CHD) in the USA. In 1961, seminal work identified major risk factors for CHD (high blood pressure, high cholesterol levels and evidence on the electrocardiogram of left ventricular hypertrophy), which later formed the basis for multivariable 10-year and 30-year risk-prediction algorithms. The FHS cohorts now comprise three generations of participants (n ≈ 15,000) and two minority cohorts. The FHS cohorts are densely phenotyped, with recurring follow-up examinations and surveillance for cardiovascular and non-cardiovascular end points. Assessment of subclinical disease and physiological profiling of these cohorts (with the use of echocardiography, ambulatory electrocardiographic monitoring, exercise stress testing, cardiac CT, heart and brain MRI, serial vascular tonometry and accelerometry) have been performed repeatedly. Over the past decade, the FHS cohorts have undergone deep ‘omics’ profiling (including whole-genome sequencing, DNA methylation analysis, transcriptomics, high-throughput proteomics and metabolomics, and microbiome studies). The FHS is a rich, longitudinal, transgenerational and deeply phenotyped cohort study with a sustained focus on state-of-the-art epidemiological methods and technological advances to facilitate scientific discoveries. The Framingham Heart Study (FHS) has been collecting epidemiological data on cardiovascular risk factors and disease for &gt;70 years. In this Timeline Perspectives article, the authors summarize the major achievements of the FHS, highlight some of the seminal publications and discuss how epidemiological research has changed and continues to evolve.},
+   author = {Charlotte Andersson and Andrew D. Johnson and Emelia J. Benjamin and Daniel Levy and Ramachandran S. Vasan},
+   doi = {10.1038/s41569-019-0202-5},
+   issn = {1759-5010},
+   issue = {11},
+   journal = {Nature Reviews Cardiology 2019 16:11},
+   keywords = {Cardiovascular diseases,Epidemiology,Medical research,Risk factors},
+   month = {5},
+   pages = {687-698},
+   pmid = {31065045},
+   publisher = {Nature Publishing Group},
+   title = {70-year legacy of the Framingham Heart Study},
+   volume = {16},
+   url = {https://www.nature.com/articles/s41569-019-0202-5},
+   year = {2019},
+}
+
+@article{Andersson2021,
+   abstract = {The Framingham Heart Study is the longest-running cardiovascular epidemiological study, starting in 1948. This paper gives an overview of the various cohorts, collected data, and most important research findings to date. In brief, the Framingham Heart Study, funded by the National Institutes of Health and managed by Boston University, spans 3 generations of well phenotyped White persons and 2 cohorts comprised of racial and ethnic minority groups. These cohorts are densely phenotyped, with extensive longitudinal follow-up, and they continue to provide us with important information on human cardiovascular and noncardiovascular physiology over the lifespan, as well as to identify major risk factors for cardiovascular disease. This paper also summarizes some of the more recent progress in molecular epidemiology and discusses the future of the study.},
+   author = {Charlotte Andersson and Matthew Nayor and Connie W. Tsao and Daniel Levy and Ramachandran S. Vasan},
+   doi = {10.1016/J.JACC.2021.01.059},
+   issn = {0735-1097},
+   issue = {21},
+   journal = {Journal of the American College of Cardiology},
+   keywords = {Framingham Heart Study,cardiovascular epidemiology,molecular epidemiology,risk factors},
+   month = {6},
+   pages = {2680-2692},
+   pmid = {34045026},
+   publisher = {Elsevier},
+   title = {Framingham Heart Study: JACC Focus Seminar, 1/8},
+   volume = {77},
+   year = {2021},
+}
+
+@article{Pedregosa2012,
+   abstract = {Scikit-learn is a Python module integrating a wide range of state-of-the-art machine learning algorithms for medium-scale supervised and unsupervised problems. This package focuses on bringing machine learning to non-specialists using a general-purpose high-level language. Emphasis is put on ease of use, performance, documentation, and API consistency. It has minimal dependencies and is distributed under the simplified BSD license, encouraging its use in both academic and commercial settings. Source code, binaries, and documentation can be downloaded from http://scikit-learn.org.},
+   author = {Fabian Pedregosa and Gael Varoquaux and Alexandre Gramfort and Vincent Michel and Bertrand Thirion and Olivier Grisel and Mathieu Blondel and Peter Prettenhofer and Ron Weiss and Vincent Dubourg and Jake Vanderplas and Alexandre Passos and David Cournapeau and Matthieu Brucher and Matthieu Perrot and Édouard Duchesnay},
+   issn = {15324435},
+   journal = {Journal of Machine Learning Research},
+   keywords = {Model selection,Python,Supervised learning,Unsupervised learning},
+   month = {1},
+   pages = {2825-2830},
+   title = {Scikit-learn: Machine Learning in Python},
+   volume = {12},
+   url = {https://arxiv.org/abs/1201.0490v4},
+   year = {2012},
+}
+@misc{data,
+   title = {Framingham data},
+   url = {https://paulblanche.com/files/DataFramingham.html},
+}
+}
+@misc{nih,
+   title = {BioLINCC: Framingham Heart Study-Cohort (FHS-Cohort)},
+   url = {https://biolincc.nhlbi.nih.gov/studies/framcohort/},
+}
+
+@misc{fhs,
+   title = {Framingham Heart Study (Three Generations of Dedication)}，
+   url = {https://www.framinghamheartstudy.org/}
+}
+@misc{nih2021,
+   title = {National Heart, Lung, and Blood Institute. 2021. Framingham Heart Study Longitudinal Data Documentation for Teaching Dataset},
+   url = {https://biolincc.nhlbi.nih.gov/media/teachingstudies/FHS_Teaching_Longitudinal_Data_Documentation_2021a.pdf},
+}
+@misc{who,
+   title = {Cardiovascular diseases (CVDs)},
+   url = {https://www.who.int/news-room/fact-sheets/detail/cardiovascular-diseases-(cvds)},
+}
+@techreport{whf2023,
+   title = {Deaths from cardiovascular disease surged 60% globally over the last 30 years: Report - World Heart Federation},
+   url = {https://world-heart-federation.org/news/deaths-from-cardiovascular-disease-surged-60-globally-over-the-last-30-years-report/},
+}
+@techreport{whr2023,
+   title = {World Heart Report 2023: Full Report - World Heart Federation},
+   url = {https://world-heart-federation.org/resource/world-heart-report-2023/},
+}
+
