updates report add text

--- a/report/heart_analysis_report.ipynb
+++ b/report/heart_analysis_report.ipynb
@@ -296,10 +296,24 @@
     "\n",
     "### k-Nearest Neighbors (k-NN):\n",
     "\n",
-    "The initial k-NN model showed a decent accuracy of around 79% but suffered from very low recall, leading to a significant number of false negatives.\n",
-    "To address the issue of class imbalance in the dataset, oversampling was applied.\n",
-    "After oversampling, the recall of the model improved notably, indicating fewer false negatives. However, this improvement came at the cost of reduced overall accuracy (64%).\n",
-    "Based on the results of these models, we would rather suggest to employ Logistic Regression with the class_weight argument due to its superior recall. However, it's important to note that both model are poorly performing on the accuracy score. Thus, for subsequent analyses, it becomes imperative to delve deeper into the specific features and their contributions to predictions or conduct additional data preprocessing to refine the model's overall effectiveness. Additionally, the underlying cause of this unsatisfactory' result is likely rooted in the inherent characteristics of the data set. The features may not be too informative or sufficient for predicting whether a patient suffers from a coronary heart disease. The features provide more of an indication of whether a person is at risk for coronary heart disease. Therefore, it would probably result in a better model to have multiple variables in the target, indicating whether a patient already shows initial signs of the disease, rather than using a binary classification mode"
+    "As our second model, we implemented a k-Nearest Neighbor model and determined the optimal k value through cross-validation. To address class imbalance, we employed OverSampling to rectify the underrepresentation of the positive class. Despite achieving an accuracy of _, it's important to note that we shouldn't overly emphasize this relatively modest accuracy. Our primary focus lies in the recall metric, which exhibits a still low but acceptable value, as illustrated in FIGURE XX. Emphasizing recall is crucial, given that avoiding false positives is paramount to ensure patients don't miss essential treatments. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Results \n",
+    "Based on the model outcomes, we recommend adopting Logistic Regression with the class_weight argument due to its superior recall. It's essential to highlight, however, that both models still fall short in achieving satisfactory recall scores. Consequently, for subsequent analyses, a thorough exploration into specific features and their impacts on predictions, as well as potential additional data preprocessing, is imperative to enhance the overall model efficacy.\n",
+    "The suboptimal performance may be attributed to the dataset's characteristics, indicating that linear models might not be the most suitable fit. Furthermore, the underlying cause of this unsatisfactory result likely stems from inherent features lacking informativeness or sufficiency in predicting coronary heart disease. Rather than indicating whether a patient suffers from the condition, these features seem to provide more of an indication of whether a person is at risk for coronary heart disease.\n",
+    "For an enhanced model, considering multiple variables in the target—indicating whether a patient shows initial signs of the disease—might yield superior results compared to utilizing a binary classification mode."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On the test data, we obtained results similar to those from our validation set, as anticipated. Nevertheless, it's worth noting that we still struggle to achieve satisfactory performance on the recall score, resulting in xx false positives."
    ]
   },
   {
@@ -334,7 +348,7 @@
    "source": [
     "### Future Work\n",
     "\n",
-    "In medical diagnostics, especially for critical conditions like coronary heart disease, the priority is often to minimize false negatives as we aim to minimize instances where patients miss critical treatment. Thus, in our analysis we tried different measures to increase the recall. However, the relatively moderate accuracy levels (53.1% for logistic regression and 64% for KNN after oversampling) might be lower than what one might expect for medical diagnostic tools. This could result from the imbalance in class distribution and needs to be evaluated within the specific application to determine whether this low accuracy is acceptable. Such an evaluation should also contains an estimation of the incurred costs, that arise by having false positive/false negatives and approach to minimize these costs."
+    "In medical diagnostics, especially for critical conditions like coronary heart disease, the priority is often to minimize false negatives as we aim to minimize instances where patients miss critical treatment. Thus, in our analysis we tried different measures to increase the recall. However, the relatively moderate accuracy and recall levels (53.1% for logistic regression and 64% for KNN after oversampling) might be lower than what one might expect for medical diagnostic tools. This could result from the imbalance in class distribution and needs to be evaluated within the specific application to determine whether this low accuracy is acceptable. Such an evaluation should also contains an estimation of the incurred costs, that arise by having false positive/false negatives and approach to minimize these costs."
    ]
   },
   {
