update report methodology and results

--- a/report/references.bib
+++ b/report/references.bib
@@ -63,6 +63,64 @@
    url = {https://arxiv.org/abs/1201.0490v4},
    year = {2012},
 }
+
+@article{Cherif2018,
+   abstract = {There is a growing trend towards data mining applications in medicine. Different algorithms have been explored by medical practitioners in an attempt to assist their work; the diagnosis of breast cancer is one of those applications. Machine learning algorithms are of vital importance to many medical problems, they can help to diagnose a disease, to detect its causes, to predict the outcome of a treatment, etc. K-Nearest Neighbors algorithm (KNN) is one of the simplest algorithms; it is widely used in predictive analysis. To optimize its performance and to accelerate its process, this paper proposes a new solution to speed up KNN algorithm based on clustering and attributes filtering. It also includes another improvement based on reliability coefficients which insures a more accurate classification. Thus, the contributions of this paper are three-fold: (i) the clustering of class instances, (ii) the selection of most significant attributes, and (iii) the ponderation of similarities by reliability coefficients. Results of the proposed approach exceeded most known classification techniques with an average f-measure exceeding 94% on the considered breast-cancer Dataset.},
+   author = {Walid Cherif},
+   doi = {10.1016/J.PROCS.2018.01.125},
+   issn = {1877-0509},
+   journal = {Procedia Computer Science},
+   keywords = {Cancer diagnosis,Data mining,K-means,K-nearest neighbors,Similarity measurement,Supervised classification,Unsupervised classification},
+   month = {1},
+   pages = {293-299},
+   publisher = {Elsevier},
+   title = {Optimization of K-NN algorithm by clustering and reliability coefficients: application to breast-cancer diagnosis},
+   volume = {127},
+   year = {2018},
+}
+@article{Lahmiri2023,
+   abstract = {Deep learning is attracting growing interest from biomedical engineering community. Researchers and clinicians are also increasingly interested in development of machine learning and pattern recognition systems used to diagnose Alzheimer's disease (AD). To enhance diagnostic power for AD, we propose an automatic system integrating convolutional neural networks (CNN) to extract deep traits from magnetic resonance image (MRI) with no prior assumption, a filtering technique to reduce number of features, and k nearest neighbors (kNN) algorithm to discriminate AD subjects from healthy control (HC) ones. The kNN is tuned by Bayesian optimization (BO) algorithm. The experimental outcomes support the hypothesis that our proposed integrative system can be effective at performing MRI classification: 94.96% ± 0.0486 accuracy, 92.05% ± 0.0746 sensitivity, and 96.62% ± 0.0350 specificity. The obtained result underscore the utility of the proposed system for screening AD as it improves accuracy compared to existing models validated on the same data set.},
+   author = {Salim Lahmiri},
+   doi = {10.1016/J.BSPC.2022.104375},
+   issn = {1746-8094},
+   journal = {Biomedical Signal Processing and Control},
+   keywords = {Alzheimer disease,Bayesian optimization,Classification,Convolutional neural networks,Deep learning,MRI,kNN},
+   month = {2},
+   pages = {104375},
+   publisher = {Elsevier},
+   title = {Integrating convolutional neural networks, kNN, and Bayesian optimization for efficient diagnosis of Alzheimer's disease in magnetic resonance images},
+   volume = {80},
+   year = {2023},
+}
+@article{Ali2021,
+   abstract = {Machine learning and data mining-based approaches to prediction and detection of heart disease would be of great clinical utility, but are highly challenging to develop. In most countries there is a lack of cardiovascular expertise and a significant rate of incorrectly diagnosed cases which could be addressed by developing accurate and efficient early-stage heart disease prediction by analytical support of clinical decision-making with digital patient records. This study aimed to identify machine learning classifiers with the highest accuracy for such diagnostic purposes. Several supervised machine-learning algorithms were applied and compared for performance and accuracy in heart disease prediction. Feature importance scores for each feature were estimated for all applied algorithms except MLP and KNN. All the features were ranked based on the importance score to find those giving high heart disease predictions. This study found that using a heart disease dataset collected from Kaggle three-classification based on k-nearest neighbor (KNN), decision tree (DT) and random forests (RF) algorithms the RF method achieved 100% accuracy along with 100% sensitivity and specificity. Thus, we found that a relatively simple supervised machine learning algorithm can be used to make heart disease predictions with very high accuracy and excellent potential utility.},
+   author = {Md Mamun Ali and Bikash Kumar Paul and Kawsar Ahmed and Francis M. Bui and Julian M.W. Quinn and Mohammad Ali Moni},
+   doi = {10.1016/J.COMPBIOMED.2021.104672},
+   issn = {0010-4825},
+   journal = {Computers in Biology and Medicine},
+   keywords = {Cardiovascular disease,Decision tree,KNN,Machine learning,Random forest},
+   month = {9},
+   pages = {104672},
+   pmid = {34315030},
+   publisher = {Pergamon},
+   title = {Heart disease prediction using supervised machine learning algorithms: Performance analysis and comparison},
+   volume = {136},
+   year = {2021},
+}
+@article{jabbar2013,
+   abstract = {Data mining techniques have been widely used to mine knowledgeable information from medical data bases. In data mining classification is a supervised learning that can be used to design models describing important data classes, where class attribute is involved in the construction of the classifier. Nearest neighbor (KNN) is very simple, most popular, highly efficient and effective algorithm for pattern recognition.KNN is a straight forward classifier, where samples are classified based on the class of their nearest neighbor. Medical data bases are high volume in nature. If the data set contains redundant and irrelevant attributes, classification may produce less accurate result. Heart disease is the leading cause of death in INDIA. In Andhra Pradesh heart disease was the leading cause of mortality accounting for 32%of all deaths, a rate as high as Canada (35%) and USA.Hence there is a need to define a decision support system that helps clinicians decide to take precautionary steps. In this paper we propose a new algorithm which combines KNN with genetic algorithm for effective classification. Genetic algorithms perform global search in complex large and multimodal landscapes and provide optimal solution. Experimental results shows that our algorithm enhance the accuracy in diagnosis of heart disease.},
+   author = {M. Akhil jabbar and B.L. Deekshatulu and Priti Chandra},
+   doi = {10.1016/J.PROTCY.2013.12.340},
+   issn = {2212-0173},
+   journal = {Procedia Technology},
+   month = {1},
+   pages = {85-94},
+   publisher = {Elsevier},
+   title = {Classification of Heart Disease Using K- Nearest Neighbor and Genetic Algorithm},
+   volume = {10},
+   year = {2013},
+}
+
 @misc{data,
    title = {Framingham data},
    url = {https://paulblanche.com/files/DataFramingham.html},
