update project overview

--- a/report/heart_analysis_report.ipynb
+++ b/report/heart_analysis_report.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "## CardioPredict: Assessing Cardiovascular Disease Risk\n",
     "\n",
-    "_CardioPredict harnesses the power of kNN Models to analyze key health indicators and provide a predictive model for assessing the risk of coronary heart disease in individuals._\n",
+    "_CardioPredict harnesses the power of kNN Models to analyze key health indicators and provide a predictive model for assessing the risk of cardiovascular disease in individuals._\n",
     "\n",
     "Authors: (listed alphabetically)\n",
     "\n",
@@ -602,14 +602,14 @@
    "id": "46232a3e",
    "metadata": {},
    "source": [
-    "### Future Work (update the figures, delete logistic model) (rewrite)\n",
+    "### Future Work\n",
     "\n",
-    "The imperative to mitigate false negatives in cardiovascular disease diagnostics cannot be overstated, particularly given the dire consequences of delayed or missed treatment opportunities. In response, this study has concentrated on refining the k-Nearest Neighbors (kNN) model—a method with a rich history of application in medical diagnostics—augmented with an oversampling technique aimed at bolstering the recall metric. Despite these efforts, the accuracy and recall rates achieved through this model may not fully align with the elevated benchmarks typically anticipated of medical diagnostic tools.\r\n",
-    "\r\n",
-    "The modest accuracy and recall observed underscore a need for further methodological refinements. This includes a comprehensive assessment of the model within clinical contexts, where the balance between sensitivity (recall) and specificity (accuracy) must be carefully managed against the backdrop of the costs associated with false positives and negatives. Such costs, both in economic and human terms, necessitate a nuanced approach to optimize the model's performance in actual clinical practice.\r\n",
-    "\r\n",
-    "Furthermore, while age and systolic blood pressure are well-documented risk factors, our analysis illuminates the substantial roles that cholesterol levels and smoking habits play in the model's predictive capacity. These findings suggest potential avenues for future research to delve into the intricate web of causative factors contributing to CVD, thereby enhancing the model's diagnostic precision.\r\n",
-    "\r\n",
+    "The imperative to mitigate false negatives in cardiovascular disease diagnostics cannot be overstated, particularly given the dire consequences of delayed or missed treatment opportunities. In response, this study has concentrated on refining the k-Nearest Neighbors (kNN) model—a method with a rich history of application in medical diagnostics—augmented with an oversampling technique aimed at bolstering the recall metric. Despite these efforts, the accuracy and recall rates achieved through this model may not fully align with the elevated benchmarks typically anticipated of medical diagnostic tools.\n",
+    "\n",
+    "The modest accuracy and recall observed underscore a need for further methodological refinements. This includes a comprehensive assessment of the model within clinical contexts, where the balance between sensitivity (recall) and specificity (accuracy) must be carefully managed against the backdrop of the costs associated with false positives and negatives. Such costs, both in economic and human terms, necessitate a nuanced approach to optimize the model's performance in actual clinical practice.\n",
+    "\n",
+    "Furthermore, while age and systolic blood pressure are well-documented risk factors, our analysis illuminates the substantial roles that cholesterol levels and smoking habits play in the model's predictive capacity. These findings suggest potential avenues for future research to delve into the intricate web of causative factors contributing to CVD, thereby enhancing the model's diagnostic precision.\n",
+    "\n",
     "In light of these considerations, future work will focus on advancing the model through multidimensional strategies. This includes integrating a broader array of clinical data, exploring advanced algorithmic enhancements, and applying cost-sensitive learning frameworks to calibrate the model more finely to the realities of clinical decision-making. It is through such endeavors that we can aspire to reach the zenith of predictive accuracy, ultimately translating into saved lives and improved patient outcomes."
    ]
   },
@@ -633,9 +633,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:573]",
+   "display_name": "573",
    "language": "python",
-   "name": "conda-env-573-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
