updates html errors

--- a/report/references.bib
+++ b/report/references.bib
@@ -125,15 +125,15 @@
    title = {Framingham data},
    url = {https://paulblanche.com/files/DataFramingham.html},
 }
-}
+
 @misc{nih,
    title = {BioLINCC: Framingham Heart Study-Cohort (FHS-Cohort)},
    url = {https://biolincc.nhlbi.nih.gov/studies/framcohort/},
 }
 
 @misc{fhs,
-   title = {Framingham Heart Study (Three Generations of Dedication)}，
-   url = {https://www.framinghamheartstudy.org/}
+   title = {Framingham Heart Study (Three Generations of Dedication)},
+   url = {https://www.framinghamheartstudy.org/},
 }
 @misc{nih2021,
    title = {National Heart, Lung, and Blood Institute. 2021. Framingham Heart Study Longitudinal Data Documentation for Teaching Dataset},
