--- a/report/heart_analysis_report.ipynb
+++ b/report/heart_analysis_report.ipynb
@@ -326,7 +326,7 @@
    "id": "c5a34053-7239-40a2-b046-d7659d477b16",
    "metadata": {},
    "source": [
-    "The distributions in {numref}`Figure {number <age_and_health_indicators_exhibit_elevated_heart_disease>` displayed in the charts indicate that most of the variables (AGE, FRW, SBP, DBP, CHOL, CIG) show a clear differentiation between individuals with heart disease (1) and those without (0), especially for SBP, DBP, and CHOL. Individuals with heart disease tend to have higher systolic blood pressure (SBP), diastolic blood pressure (DBP), and cholesterol (CHOL) levels, while age, relative weight (FRW), and cigarette consumption (CIG) do not show as pronounced a difference between the two groups. Most of the features, except for CIG and AGE are roughly normally distributed."
+    "The distributions in {numref}`Figure {number} <age_and_health_indicators_exhibit_elevated_heart_disease>` displayed in the charts indicate that most of the variables (AGE, FRW, SBP, DBP, CHOL, CIG) show a clear differentiation between individuals with heart disease (1) and those without (0), especially for SBP, DBP, and CHOL. Individuals with heart disease tend to have higher systolic blood pressure (SBP), diastolic blood pressure (DBP), and cholesterol (CHOL) levels, while age, relative weight (FRW), and cigarette consumption (CIG) do not show as pronounced a difference between the two groups. Most of the features, except for CIG and AGE are roughly normally distributed."
    ]
   },
   {
