updates debug report

--- a/report/heart_analysis_report.ipynb
+++ b/report/heart_analysis_report.ipynb
@@ -425,7 +425,7 @@
     "```{figure} ../results/figures/boxplot_of_specified_numerical_features.png\n",
     "---\n",
     "width: 600px\n",
-    "name: boxplot_of_specified_numerical_features.png\n",
+    "name: boxplot_of_specified_numerical_features\n",
     "---\n",
     "Boxplot of Numerical Features\n",
     "```"
