--- a/report/heart_analysis_report.ipynb
+++ b/report/heart_analysis_report.ipynb
@@ -5,7 +5,7 @@
    "id": "3d71a892-7243-4721-adc1-119d1615a883",
    "metadata": {},
    "source": [
-    "## CardioPredict: Assessing Cardiovascular Disease Risk\n",
+    "# Assessing Cardiovascular Disease Risk Utilizing the K-Nearest Neighbors Algorithm\n",
     "\n",
     "_CardioPredict harnesses the power of kNN Models to analyze key health indicators and provide a predictive model for assessing the risk of cardiovascular disease in individuals._\n",
     "\n",
@@ -636,7 +636,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "573",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -650,7 +650,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
