add limitations and make kNN consistent

--- a/report/heart_analysis_report.ipynb
+++ b/report/heart_analysis_report.ipynb
@@ -602,6 +602,23 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Limitations\n",
+    "\n",
+    "This research, while offering valuable insights into the predictive modeling of cardiovascular disease (CVD) risk, encounters several limitations that warrant acknowledgment and consideration for future work. The study achieved modest levels of accuracy and recall in the predictive modeling. This limitation is partly attributable to the constrained size and scope of the dataset utilized. With just over 1000 observations sourced from publicly available data primarily intended for teaching and practice, the model's training and validation might not comprehensively encapsulate the complex, multifaceted nature of CVD risk factors. Larger, more diverse datasets could potentially enhance the model's predictive power. \n",
+    "\n",
+    "While the Framingham Heart Study is a rich source of clinical data, its span of over 70 years introduces certain challenges. Medical practices, diagnostic criteria, and patient demographics have evolved considerably over this period. Therefore, applying findings from this historical dataset to contemporary clinical scenarios may have inherent limitations. Ideally, employing machine learning techniques on real-time, real-world clinical data could yield more nuanced and current insights. \n",
+    "\n",
+    "The research primarily revolves around the kNN algorithm, supplemented by oversampling to address class imbalance. Although kNN is a robust and effective method, relying exclusively on it might overlook the potential benefits of other predictive models. Machine learning in healthcare is a rapidly advancing field, and integrating a variety of models, such as random forests, support vector machines, or deep learning approaches, could offer a more comprehensive understanding and improved predictive accuracy.\n",
+    "\n",
+    "The generalizability of the study's findings might be limited due to the specific demographic and clinical characteristics of the Framingham study cohort. The cohort, primarily from a specific geographical location and demographic, may not accurately represent the global population's diverse spectrum. Future studies should aim to include more heterogeneous populations to enhance the applicability and relevance of the findings.\n",
+    "\n",
+    "These limitations highlight the need for ongoing research and iterative model refinement. Future studies should aim to incorporate larger, more diverse datasets, explore a wider range of predictive models, and continually adapt to the evolving landscape of cardiovascular health and risk factors."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "46232a3e",
    "metadata": {},
    "source": [
